# quadratic-sieve

./: Cargo.toml  README.md
src/: constants.rs  factorbase.rs  format_color.rs  main.rs  mpqs_generator.rs  multiplier.rs  number_theory.rs  p_minus_plus_1_factoring.rs  polynomial_generator.rs  relations.rs  siqs_generator.rs
